--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <i class="fas fa-cog"></i>
     </button>
 
-    <div id="setting" class="setting">
+    <div id="settings" class="settings">
       <form id="settings-form">
         <div>
           <label for="difficulty">Difficulty</label>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="container">
-      <h2>Speed Typier</h2>
+      <h2>👩‍💻 Speed Typier 👨‍💻</h2>
       <small>Type the following:</small>
 
       <h1 id="word"></h1>
